Fix text not getting selected when created on a normal layer

BUG:516006