libs/flake/KoShapeController.h
@@ -62,7 +62,7 @@ public:
      * @return command which will insert the shape into the document or 0 if the
      *         insertion was cancelled. The command is not yet executed.
      */
-    KUndo2Command* addShape(KoShape *shape, KoShapeContainer *parentShape, KUndo2Command *parent = 0);
+    KUndo2Command* addShape(KoShape *shape, KoShapeContainer **parentShape, KUndo2Command *parent = 0);
 
     /**
      * @brief Add a shape to the document, skipping any dialogs or other user interaction.
@@ -73,7 +73,7 @@ public:
      *
      * @return command which will insert the shape into the document. The command is not yet executed.
      */
-    KUndo2Command* addShapeDirect(KoShape *shape, KoShapeContainer *parentShape, KUndo2Command *parent = 0);
+    KUndo2Command* addShapeDirect(KoShape *shape, KoShapeContainer **parentShape, KUndo2Command *parent = 0);
 
     /**
      * @brief Add shapes to the document, skipping any dialogs or other user interaction.
